feat:added conection string

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection" : "Server=DANUSHKA\\SQLEXPRESS;Database=EmployeeMaster;Trusted_Connection=True;TrustServerCertificate=True;"
+    }
 }
